--- a/src/HybridNativeJSApp/css/Microsoft.VisualStudio.Blend.Html.Intrinsic.Grid.css
+++ b/src/HybridNativeJSApp/css/Microsoft.VisualStudio.Blend.Html.Intrinsic.Grid.css
@@ -1,8 +1,8 @@
 ﻿.ms-grid
 {
     display: -ms-grid;
-    -ms-grid-rows: 1fr 1fr;
+    -ms-grid-rows: 50px 1fr;
     -ms-grid-columns: 1fr 1fr;
     width: auto;
-    height: 400px;
+    height: 550px;
 }
